--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Sorting Visualizer</title>
         <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css"> 
+<link rel="stylesheet" href="./js_files/style.css"> 
     </head>
     <header>
         <h1 class="title">Sorting Visualizer</h1>
@@ -39,11 +39,11 @@
         <div id="bars" class="flex-container">
             <!-- JavaScript Bundle with Popper -->
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-            <script src="./sorting.js"></script>
-            <script src="./bubble.js"></script>
-            <script src="./merge.js"></script>
-            <script src="./quick.js"></script>
-            <script src="./insertion.js"></script>
+            <script src="./js_files/sorting.js"></script>
+            <script src="./js_files/bubble.js"></script>
+            <script src="./js_files/merge.js"></script>
+            <script src="./js_files/quick.js"></script>
+            <script src="./js_files/insertion.js"></script>
         </div>
     </body>
 </html>
